apps/postgres/svc-lb.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres-operator-ui"
  labels:
    application: "postgres-operator-ui"
spec:
  type: LoadBalancer
  selector:
    name: "postgres-operator-ui"
  loadBalancerClass: "svc-lb.tailscale.iptables.sh/lb"
  allocateLoadBalancerNodePorts: false
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
