apps/postgres/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "postgres-operator-ui"
  labels:
    application: "postgres-operator-ui"
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  rules:
    - host: "ui.example.org"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "postgres-operator-ui"
                port:
                  number: 80
